--- a/bigote.html
+++ b/bigote.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1 class="titulo">Tarea del Bigote</h1>
+        <p class="titulo"> </p>
         <p class="titulo">Esta tarea esta hecha con css y html</p>
         <div class="mustache"></div>
     </body>
