--- a/bigote.html
+++ b/bigote.html
@@ -9,7 +9,7 @@
     <body>
         <h1 class="titulo">Tarea del Bigote</h1>
         <p class="titulo">Esta tarea esta hecha con css y html</p>
-        <h2 class="id">By: Luis Angel Huanca Mamani      Codigo Saga: A26230-7       S A V B</h2>
+        <h2 class="id">By: Luis Angel Huanca Mamani      Codigo Saga: A26230-7</h2>
         <div class="mustache"></div>
     </body>
 </html>
