--- a/bigote.html
+++ b/bigote.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
-        <h1 class="titulo">Tarea del Bigote</h1>
-        <p class="titulo">Esta tarea esta hecha con css y html</p>
-        <h2 class="id">By: Luis Angel Huanca Mamani      Codigo Saga: A26230-7       S A V B</h2>
+        <div class="sombrero"></div>
+        <div class="ceja"></div>
+        <div class="ojos"></div>
         <div class="mustache"></div>
     </body>
 </html>
